objects/Flow_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <description>Default value when blank or no data by source path.</description>
        <label>Default</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disregard_Blank_Value__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Do not pass the blank value from Source  as the Flow input variable</description>
        <inlineHelpText>Do not pass the blank value from Source as the Flow input variable</inlineHelpText>
        <label>Disregard Blank Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flow_Input_Format__c</fullName>
        <label>Flow Input Format</label>
        <referenceTo>Flow_Input_Format__mdt</referenceTo>
        <relationshipLabel>Flow Mappings</relationshipLabel>
        <relationshipName>Flow_Mappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Flow_Input_Name__c</fullName>
        <label>Flow Input Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow_Setting__c</fullName>
        <label>Flow Setting</label>
        <referenceTo>Flow_Setting__mdt</referenceTo>
        <relationshipLabel>Flow Mappings</relationshipLabel>
        <relationshipName>Flow_Mappings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Flow_Variable_Type__c</fullName>
        <defaultValue>&quot;Input&quot;</defaultValue>
        <label>Flow Variable Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Input</fullName>
                    <default>true</default>
                    <label>Input</label>
                </value>
                <value>
                    <fullName>Output</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Path__c</fullName>
        <label>Source Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trim_Value__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The input value does not contain any leading or trailing white space characters.</description>
        <inlineHelpText>The input value does not contain any leading or trailing white space characters.</inlineHelpText>
        <label>Trim Value</label>
        <type>Checkbox</type>
    </fields>
    <label>Flow Mapping</label>
    <pluralLabel>Flow Mappings</pluralLabel>
</CustomObject>